<resources>
  <string name="app_name">My First App</string>
  <string name="squareInputHint">请输入数字</string>
  <string name="squareCalcText">计算平方</string>
  <string name="squareLabelText">平方计算结果</string>
  <string name="toastButtonText">toastButton</string>
  <string name="secondActivityButton">secondActivity</string>
  <string name="title_activity_third">ThirdActivity</string>
  <string name="title_home">Home</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>
</resources>
